--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.8
+mysqlclient==2.2.4
 packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
