--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-cloudinary-storage==0.3.0
 django-cors-headers==4.4.0
 django-grappelli==4.0.1
 django-jazzmin==3.0.0
+django-rest-passwordreset==1.4.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
